changed some styles, added 'pick-category' component, also added 'in-game' component 'movies(not done)' init.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react-router-dom": "^6.25.1",
+    "react-transition-group": "^4.4.5",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
