--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "match-sorter": "^6.3.4",
     "react-router-dom": "^6.25.1",
     "react-transition-group": "^4.4.5",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@react-router/dev": "^0.0.0-experimental-c0856287f",
